syntax = "proto3";

package product;

option go_package = "proto/product";

import "product/product.proto";

service ProductService {
    rpc SaveRequestedGift(SaveRequestedGiftRequest) returns (SaveRequestedGiftResponse) {}
    rpc SaveRequestedGiftBulk(SaveRequestedGiftBulkRequest) returns (SaveRequestedGiftBulkResponse) {}
    rpc UpdateProductStatus(UpdateProductStatusRequest) returns (UpdateProductStatusResponse) {}
    rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse) {}
    rpc DeleteProducts(DeleteProductsRequest) returns (DeleteProductsResponse) {}
}